alb.tf
resource "aws_lb" "application_load_balancer" {
    name            = "my-alb-2024"
    internal        = false
    load_balancer_type = "application"
    security_groups = [aws_security_group.alb_sg.id]
    subnets         = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id, aws_subnet.public_subnet_3.id]
    enable_deletion_protection = false
    tags = {
        Name = "My ALB 2024"
    }
}

resource "aws_lb_target_group" "target_group" {
    name     = "my-target-group"
    port     = 80
    protocol = "HTTP"
    vpc_id   = aws_vpc.my_new_vpc.id
    target_type = "instance"
    health_check {
        path                = "/"
        protocol            = "HTTP"
        port                = "traffic-port"
        interval            = 30
        timeout             = 5
        healthy_threshold   = 2
        unhealthy_threshold = 2
        matcher             = "200"
    }
    tags = {
        Name = "MyTargetGroup"
    }
}

resource "aws_lb_target_group_attachment" "target_group_attachment" {
    target_group_arn = aws_lb_target_group.target_group.arn
    target_id        = aws_instance.wordpress_server.id
    port             = 80
}

resource "aws_lb_listener" "alb_listener" {
    load_balancer_arn = aws_lb.application_load_balancer.arn
    port              = "80"
    protocol          = "HTTP"

    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.target_group.arn
    }
}
