routing.tf
# Internet gateway
resource "aws_internet_gateway" "my_new_igw" {
    vpc_id = aws_vpc.my_new_vpc.id
    tags = {
        Name = "VPC IGW"
    }
}

# Public route table
resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.my_new_vpc.id
    # Default route to forward traffic destined for the internet (0.0.0.0/0)
    # to the internet gateway
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.my_new_igw.id
    }
    tags = {
        Name = "Public route table"
    }
}

# Private route table
resource "aws_route_table" "private_route_table" {
    vpc_id = aws_vpc.my_new_vpc.id
    # Default route that directs traffic to a NAT gateway (nat_gateway_id) for
    # outbound internet access
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_gateway.id
    }
    tags = {
        Name = "Private route table"
    }
}

# Route table associations
resource "aws_route_table_association" "public_subnet_1_association" {
    subnet_id = aws_subnet.public_subnet_1.id
    route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_subnet_2_association" {
    subnet_id = aws_subnet.public_subnet_2.id
    route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_subnet_3_association" {
    subnet_id = aws_subnet.public_subnet_3.id
    route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "private_subnet_1_association" {
    subnet_id = aws_subnet.private_subnet_1.id
    route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_subnet_2_association" {
    subnet_id = aws_subnet.private_subnet_2.id
    route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_subnet_3_association" {
    subnet_id = aws_subnet.private_subnet_3.id
    route_table_id = aws_route_table.private_route_table.id
}

# Elastic IP address for the NAT gateway
resource "aws_eip" "eip" {
    domain = "vpc"
    depends_on = [ aws_internet_gateway.my_new_igw ]
}

# NAT gateway
resource "aws_nat_gateway" "nat_gateway" {
    allocation_id = aws_eip.eip.id
    subnet_id = aws_subnet.public_subnet_1.id
    depends_on = [ aws_internet_gateway.my_new_igw ]
}
